--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.1",
     "modern-normalize": "^3.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
