--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
     "modern-normalize": "^3.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
